--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   &__position {
     position: relative;
-    top: -136px;
+    margin-top: -136px;
     display: flex;
     justify-content: space-between;
   }
