--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -3,13 +3,29 @@ body {
 
   color: $main-text;
   background-color: $main-bgc;
+
+  &.menu-open {
+    overflow: hidden;
+  }
 }
 
 .container {
-  width: 1240px;
+  max-width: 1240px;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
+
+  @include desktop {
+    width: 1200px;
+  }
+
+  @include tablet {
+    width: 768px;
+  }
+
+  @include mobile {
+    width: 480px;
+  }
 }
 
 .visually-hidden {
