--- a/css/main.css
+++ b/css/main.css
@@ -541,11 +541,11 @@ body.menu-open {
   .menu-box {
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     height: 100%;
-    width: 100%;
-    transform: translateX(0);
-    transition: transform 250ms linear;
+    width: 75%;
+    transform: translateX(100%);
+    transition: transform 250ms linear, opacity 250ms linear;
     opacity: 0;
     display: flex;
     flex-direction: column;
@@ -555,8 +555,7 @@ body.menu-open {
   }
   .menu-box.is-open {
     opacity: 1;
-    left: 75%;
-    transform: translateX(-50%);
+    transform: translateX(0);
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -1650,15 +1649,27 @@ body.menu-open {
   padding-bottom: 60px;
   overflow: hidden;
 }
+@media screen and (max-width: 767px) {
+  .footer {
+    padding-top: 60px;
+  }
+}
 .footer__block {
   position: relative;
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 767px) {
+  .footer__block {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
 .footer__img {
   position: absolute;
   top: -180px;
   right: -500px;
+  z-index: -1;
 }
 .footer__img--green {
   top: -150px;
@@ -1667,6 +1678,12 @@ body.menu-open {
 
 .footer-leftblock {
   width: 320px;
+}
+@media screen and (max-width: 767px) {
+  .footer-leftblock {
+    margin-bottom: 25px;
+    text-align: center;
+  }
 }
 .footer-leftblock__link {
   font-style: normal;
@@ -1695,9 +1712,19 @@ body.menu-open {
   opacity: 0.75;
   margin-bottom: 24px;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-leftblock__text {
+    max-width: 200px;
+  }
+}
 .footer-leftblock__list {
   display: flex;
   align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .footer-leftblock__list {
+    justify-content: center;
+  }
 }
 .footer-leftblock__item:not(:last-child) {
   margin-right: 24px;
@@ -1728,8 +1755,25 @@ body.menu-open {
 .footer-rightblock__list {
   display: flex;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-rightblock__list {
+    margin-right: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer-rightblock__list {
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+  }
+}
 .footer-rightblock__item:not(:last-child) {
   margin-right: 87px;
+}
+@media screen and (max-width: 767px) {
+  .footer-rightblock__item:not(:last-child) {
+    margin-right: 0;
+  }
 }
 .footer-rightblock__text {
   font-style: normal;
@@ -1741,6 +1785,11 @@ body.menu-open {
   color: #0e1735;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-second-list__item {
+    width: 101px;
+  }
+}
 .footer-second-list__item:not(:last-child) {
   margin-bottom: 18px;
 }
