--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -212,11 +212,11 @@
   @include mobile {
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     height: 100%;
-    width: 100%;
-    transform: translateX(0);
-    transition: transform 250ms linear;
+    width: 75%;
+    transform: translateX(100%);
+    transition: transform 250ms linear, opacity 250ms linear;
     opacity: 0;
     display: flex;
     flex-direction: column;
@@ -225,8 +225,8 @@
     background-color: $main-bgc;
     &.is-open {
       opacity: 1;
-      left: 75%;
-      transform: translateX(-50%);
+
+      transform: translateX(0);
     }
   }
 
