--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+    z-index: 1;
   }
 }
 
@@ -18,23 +19,49 @@
     top: 38px;
     left: 24px;
     width: 85px;
+    z-index: -1;
 
+    @include mobile {
+      display: none;
+    }
     &--man {
       top: 71px;
       left: 184px;
       width: 40px;
+
+      @include tablet {
+        top: 268px;
+      }
+
+      @include mobile {
+        top: 280px;
+        left: 100px;
+      }
     }
 
     &--girl {
       top: 173px;
       left: 47px;
       width: 40px;
+      @include mobile {
+        left: 0;
+      }
     }
 
     &--house {
       top: 178px;
       left: 175px;
       width: 59px;
+
+      @include tablet {
+        top: 255px;
+        left: 38px;
+      }
+
+      @include mobile {
+        top: 267px;
+        left: 0;
+      }
     }
   }
 }
@@ -45,6 +72,7 @@
   align-items: center;
   padding-top: 65px;
   padding-bottom: 65px;
+
   &__title {
     font-style: normal;
     font-weight: 600;
@@ -69,6 +97,10 @@
 
   background-color: $main-bgc;
 
+  @include mobile {
+    max-width: 385px;
+  }
+
   &__input {
     padding: 16px 17px;
     width: 303px;
@@ -80,6 +112,10 @@
     line-height: 1.57;
 
     color: $gray-text;
+
+    @include mobile {
+      max-width: 200px;
+    }
   }
 
   &__btn {
@@ -122,23 +158,55 @@
     top: 44px;
     right: 180px;
     width: 74px;
+    z-index: -1;
+
+    @include tablet {
+      right: 45px;
+    }
+
+    @include mobile {
+      display: none;
+    }
 
     &--girl {
       top: 107px;
       right: 62px;
       width: 36px;
+
+      @include tablet {
+        top: 140px;
+      }
+
+      @include mobile {
+        right: 0;
+      }
     }
 
     &--man {
       top: 143px;
       right: 180px;
       width: 36px;
+
+      @include tablet {
+        top: 269px;
+        right: 62px;
+      }
+
+      @include mobile {
+        top: 172px;
+        right: 0;
+      }
     }
 
     &--room {
       top: 197px;
       right: 53px;
       width: 55px;
+
+      @include mobile {
+        top: 38px;
+        right: 0;
+      }
     }
   }
 }
